--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
     </footer>
 <!-- test test -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/js/translation.js"></script> 
-    <script src="assets/js/main.js"></script> 
+    <script src="./assets/Js/translation.js"></script> 
+    <script src="./assets/Js/main.js"></script> 
 </body>
 </html>
